# memorize

./: Cargo.toml  README.md
benches/: bench_main.rs
src/: lib.rs
tests/: test_main.rs
